# aiphoria

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  example.ipynb  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yaml  publish-testpypi.yaml  run-tests.yaml  test.yaml
core/: builder.py  datachecker.py  dataprovider.py  datastructures.py  datavisualizer.py  datavisualizer_plotly_post.js  flowgraph.py  flowmodifiersolver.py  flowsolver.py  logger.py  network_graph.html  network_graph.js  network_graph.py  parameters.py  types.py  utils.py  visualizer_parameters.py
core/datavisualizer_data/: LICENSE  datavisualizer_plotly.html  datavisualizer_plotly_post.js
core/network_graph_data/: echarts_min.js  network_graph.html  network_graph.js
data/: example_data.xlsx
docs/: conf.py  environment.yaml  index.md  index.rst  requirements.txt
docs/content/: funding.md  installation.md  license.md  theory.md
docs/content/getting_started/: Part-4-Visualizations.md  Part_0_-_Installation.md  Part_1_-_Example_scenario_explained.md  Part_2_-_Example_scenario_settings.md  Part_3_-_Defining_data_for_scenario.md  Step 1 - User input.md  Step 2 - Data checking and data build for FlowSolver.md  Step 3 - Solve flows for baseline scenario using the FlowSolver.md  Step 4 - ODYM classifications index table and stock solving.md  index.md
lib/docs/: ODYM Example and Tutorial No. 1. System with two processes, two parameters, one material.ipynb  ODYM Example and Tutorial No. 6. MaTrace.ipynb  Tutorial1_MFATestSystem.p  dynamic_stock.py
lib/docs/Files/: Steel_Consumption_Final_9Countries.xlsx
lib/docs/Playground/: FAOSTAT_data_6-8-2023.xls_sawnwood.xls  Sawnwood.ipynb  Sawnwood_Consumption_Final_Europe.xlsx  Sawnwood_Lifetime_Europe.xlsx  test_wednesday.ipynb
lib/odym/modules/: dynamic_stock_model.py
paper/: paper.bib  paper.md
src/aiphoria/: __init__.py  example.py  runner.py
src/aiphoria/core/: __init__.py  builder.py  datachecker.py  dataprovider.py  datastructures.py  datavisualizer.py  flowmodifiersolver.py  flowsolver.py  logger.py  network_graph.py  parameters.py  utils.py
src/aiphoria/core/datavisualizer_data/: datavisualizer_plotly.html
src/aiphoria/core/network_graph_data/: network_graph.html
src/aiphoria/data/: example_scenario.xlsx
src/aiphoria/lib/docs/: LogFileTest.md  ODYM Example and Tutorial No. 3. Dynamic Stock modelling.ipynb  Tutorial2_MFATestSystem.p  dynamic_flows_and_stocks.ipynb
src/aiphoria/lib/odym/modules/: dynamic_stock_model.py
template/: aiphoria_scenario_file_template.xlsx  aiphoria_template.xlsx
tests/: test_aiphoria.py  test_builder.py  test_datachecker.py  test_datastructures.py  test_datavisualizer.py  test_example.py  test_flowmodifiersolver.py  test_flowsolver.py  test_reference_scenario.py  test_runner.py  test_visualizer_parameters.py  tests_to_run.txt
tests/reference_data/: example_scenario.xlsx  test_scenario.xlsx  test_scenario_abs.xlsx  test_scenario_color_definitions.xlsx  test_scenario_definitions.xlsx  test_scenario_flow_indicators.xlsx  test_scenario_flowsolver.xlsx  test_scenario_flowsolver_virtual_flows.xlsx  test_scenario_fms_constrained.xlsx  test_scenario_fms_constrained_abs.xlsx  test_scenario_fms_constrained_rel.xlsx  test_scenario_fms_unconstrained.xlsx  test_scenario_fms_unconstrained_1.xlsx  test_scenario_fms_unconstrained_abs.xlsx  test_scenario_fms_unconstrained_rel.xlsx  test_scenario_stock_lt_overrides.xlsx
