[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aiphoria"
version = "0.9.6"
authors = [
    { name="Janne Järvikylä", email="janne.jarvikyla@efi.int" },
]
maintainers = [
    { name="Janne Järvikylä", email="janne.jarvikyla@efi.int" },
]
description = "Dynamic MFA tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas==2.2.2",
    "Pillow>=12.1.1",
    "plotly==6.0.0",
    "openpyxl==3.1.3",
    "scipy",
    "matplotlib",
    "xlrd",
    "xlwt",
    "tqdm",
    "xlsxwriter",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/EuropeanForestInstitute/aiphoria"
Issues = "https://github.com/EuropeanForestInstitute/aiphoria/issues"

[tool.setuptools.packages.find]
where = ["src"]

# Exclude dotfiles
[tools.setuptools.exclude-package-data]
"aiphoria.core.datavisualizer_data" = [".*"]
"aiphoria.core.network_graph_data" = [".*"]

# # Include HTML template files
[tools.setuptools.package-data]
"aiphoria.data" = ["example_scenario.xlsx"]
# aiphoria = ["*.txt", "*.tst"]
# "aiphoria.core.datavisualizer_data" = ["", "*.*"]
# "aiphoria.core.network_graph_data" = ["*.*"]

[tool.pytest.ini_options]
addopts = "--cov=aiphoria"
python_files = [
    "tests/test_builder.py",
    "tests/test_datachecker.py",
    "tests/test_datastructures.py",
    "tests/test_datavisualizer.py",
    "tests/test_example.py",
    "tests/test_flowsolver.py",
    "tests/test_flowmodifiersolver.py",
    "tests/test_reference_scenario.py",
    "tests/test_runner.py",
    "tests/test_visualizer_parameters.py",
]
testpaths = [
    "tests"
]

[tool.coverage.run]
omit = [
    "src/aiphoria/__init__.py",
    "src/aiphoria/core/__init__.py",
    "src/aiphoria/lib/*",
    "src/aiphoria/core/logger.py",
]
